<resources>
    <string name="app_name">Movie Finder</string>
    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>
    <string name="movie_picture">Movie Picture</string>
    <string name="movie_popular">Most Popular</string>
    <string name="movie_highest_rated">Highest-rated</string>
    <string name="movie_favorite">Favorite Movies</string>
    <string name="movie_title">Awesome Movie Title</string>
    <string name="movie_release_date">2018-11-12</string>
    <string name="movie_videos">Videos</string>
    <string name="movie_reviews">Reviews</string>
    <string name="movie_save">Save as favorite</string>
    <string name="movie_settings">Settings</string>
    <string name="movie_most_popular_sort">Most Popular</string>
    <string name="movie_overview">The film reveals the origin story of half-human, half-Atlantean Arthur Curry and takes him on the journey of his lifetime—one that will not only force him to face who he really is, but to discover if he is worthy</string>
</resources>
